# QuickQanava

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  404.html  CHANGELOG.md  CMakeLists.qt5.txt  CMakeLists.qt6.txt  CMakeLists.txt  GTpo.pro  Makefile  README.md  advanced.html  common.pri  conanfile.py  edges.html  graph.html  index.html  installation.html  internals.html  licence.html  licence.txt  nodes.html  oxygen.txt  quickqanava-common.pri  quickqanava.pro  quickqanava.qbs  quickqanava2.pro  reference.html  run_protoc.sh  samples.html  sitemap.xml  styles.html  utilities.html
GTpo/: .gitignore  CMakeLists.txt  GTpo.pro  LICENCE.txt  README.md  common.pri  gtpo-common.pri  gtpo.pri  gtpo.qbs
GTpo/benchmarks/: .generate_benchmark_graphs.ipynb.kate-swp  benchmarks.pro  generate_benchmark_graphs.ipynb  gtpoBenchmarks.cpp  gtpo_benchmarks.cpp  linearize_dfs_tree.csv
GTpo/doc/: doxyfile.dox  gtpo-behaviours-class.xml  gtpo-data_model  gtpo-datamodel-static_configuration.xml  gtpo-datamodel.xml  gtpo-topo-group_adjacent_edges.xml  gtpo.dox  gtpo_footer.html  gtpo_topo_group_adjacent_edges.xml
GTpo/src/: GTpo  GTpo.h  GTpoQt  GTpoQt.h  GTpoStd  GTpoStd.h  adjacent_behaviour.h  adjacent_behaviour.hpp  algorithm.h  algorithm.hpp  behaviour.h  behaviourable.h  behaviourable.hpp  config.h  edge.h  edge.hpp  functional.h  generator.h  generator.hpp  graph.h  graph.hpp  graph_behaviour.h  graph_behaviour.hpp  graph_property.h  group.h  group.hpp  group_behaviour.h  group_behaviour.hpp  gtpo.pb.cc  gtpo.pb.h  gtpo.pri  gtpo.pro  gtpo.proto  gtpoAdjacentBehaviour.h  gtpoAdjacentBehaviour.hpp  gtpoBehaviour.h  gtpoBehaviour.hpp  gtpoContainerAdapter.h  gtpoEdge.hpp  gtpoGenEdge.h  (+31 more)
GTpo/tests/: gtpoBehaviour.cpp  gtpoConcrete.cpp  gtpoContainers.cpp  gtpoGraph.cpp  gtpoGroups.cpp  gtpoProtobuf.cpp  gtpoTests.cpp  gtpoTopology.cpp  gtpo_algorithm_tests.cpp  gtpo_behaviours_tests.cpp  gtpo_config_tests.cpp  gtpo_containers_tests.cpp  gtpo_functional_tests.cpp  gtpo_generator_tests.cpp  gtpo_graph_tests.cpp  gtpo_groups_tests.cpp  gtpo_tests.cpp  gtpo_topology_tests.cpp  tests.pro
QuickContainers/: CHANGELOG.md  CMakeLists.txt  README.md  quickcontainers-common.pri  quickcontainers.pri  quickcontainers.pro  quickcontainers.qbs
QuickContainers/include/: QuickContainers.h  qcmAbstractContainer.h  qcmAdapter.h  qcmContainer.h  qcmContainerModel.h
QuickContainers/src/: QuickContainers  QuickContainers.h  QuickContainers.qrc  qcmAbstractContainer.h  qcmAbstractContainerModel.h  qcmAdapter.h  qcmContainer.h  qcmContainerConcept.h  qcmContainerModel.h  qcmContainerModelComposer.h  qcmContainerModelComposerListReference.h  qcmContainerModelComposerWatcher.cpp  qcmContainerModelComposerWatcher.h  qcmContainerModelFilter.cpp  qcmContainerModelFilter.h  qcmContainerModelListReference.h  qcmObjectModel.cpp  qcmObjectModel.h  qcmPlugin.cpp  qcmPlugin.h  qmldir  quickcontainers-build-lib.pro  quickcontainers.pri
QuickContainers/tests/: qcmContainerModelTests.cpp  qcmContainerModelTests.h  qcmObjectModelTests.cpp  qcmTests.cpp  qcmTests.h  tests.pro
exports/: CMakeLists.txt
exports/cmake/: LibraryConfig.cmake.in
samples/advanced/: AdvancedGroup.qml  AdvancedNode.qml  CMakeLists.txt  Hook.qml  advanced.qml  advanced.qrc  main.cpp
samples/connector/: CMakeLists.txt  connector.cpp  connector.pro  connector.qml  connector.qrc  custom.qml  customdocks.qml  default.qml  docks.qml
samples/cpp/: CMakeLists.txt  CustomEdge.qml  CustomGroup.qml  CustomNode.qml  cpp_sample.cpp  cpp_sample.h  cpp_sample.qml
samples/dataflow/: CMakeLists.txt  ColorNode.qml  ColorPopup.qml  FlowNode.qml  ImageNode.qml  OperationNode.qml  PercentageNode.qml  SampleDataFlow.qml  TintNode.qml  dataflow.cpp  dataflow.pro  dataflow.qml  dataflow.qrc  qanDataFlow.cpp  qanDataFlow.h  qanFlowNode.cpp  qanFlowNode.h  qtquickcontrols2.conf
samples/edges/: CMakeLists.txt  Curved.qml  Endings.qml  Ortho.qml  SampleEdges.qml  curved.qml  edges.cpp  edges.pro  edges.qml  edges.qrc  endings.qml  ortho.qml  qtquickcontrols2.conf
samples/groups/: CMakeLists.txt  SampleGroups.qml  groups.cpp  groups.h  groups.pro  groups.qml  groups.qrc  main.qml
samples/layouts/: CMakeLists.txt  default.qml  layouts.cpp  layouts.qml  layouts.qrc  qanOrgTreeLayout.cpp  qanOrgTreeLayout.h
samples/navigable/: CMakeLists.txt  grid.qml  image.qml  navigable.cpp  navigable.pro  navigable.qml  navigable.qrc
samples/nodes/: CMakeLists.txt  ControlNode.qml  CustomNode.qml  DiamondNode.qml  custom.qml  default.qml  nodes.cpp  nodes.pro  nodes.qml
samples/style/: CMakeLists.txt  CustomEdge.qml  RectNode.qml  RoundNode.qml  custom.cpp  custom.h  main.qml  qanStyleSample.cpp  qanStyleSample.h  style.cpp  style.pro  style.qml  style.qrc
samples/topology/: CMakeLists.txt  EdgesListView.qml  FaceNode.qml  ImgNode.qml  NodesListView.qml  ScreenshotPopup.qml  gtpo.proto  main.qml  qanFaceNode.cpp  qanFaceNode.h  qanImgNode.cpp  qanImgNode.h  qanTopologySample.cpp  qanTopologySample.h  topology.cpp  topology.pb.cc  topology.pb.h  topology.pro  topology.proto  topology.qml  topology.qrc
src/: .directory  BottomRightResizer.qml  CMakeLists.qt5.txt  CMakeLists.qt6.txt  CMakeLists.txt  CanvasNodeTemplate.qml  ConnectorDropNode.qml  CurvedEdge.qml  Edge.qml  EdgeCurvedPath.qml  EdgeDstArrowPath.qml  EdgeDstCirclePath.qml  EdgeDstRectPath.qml  EdgeOrthoPath.qml  EdgeSrcArrowPath.qml  EdgeSrcCirclePath.qml  EdgeSrcRectPath.qml  EdgeStraightPath.qml  EdgeTemplate.qml  GTpo  GTpoQt  GTpoQt.h  GTpoStd  GTpoStd.h  Graph.qml  GraphPreview.qml  GraphView.qml  Group.qml  HeatMapPreview.qml  HorizontalDock.qml  LabelEditor.qml  LineGrid.qml  NavigablePreview.qml  Node.qml  NodeLabelEditor.qml  OriginCross.qml  PointGrid.qml  Port.qml  PropertyCreator.qml  QuickQanava  (+156 more)
src/GraphicalEffects5/: QuickQanavaGraphicalEffects.qrc
src/gtpo/: behaviourable.h  behaviourable.hpp  container_adapter.h  edge.h  graph.h  graph.hpp  graph_property.h  gtpoEdgeBase.h  gtpoGraphBase.h  gtpoGraphBase.hpp  gtpoGraphProperty.h  gtpoNodeBase.h  gtpoNodeBase.hpp  node.h  node.hpp  (+4 more)
(+272 files in other folders)
